tests/ui/unsafe-binders/mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/mismatch.rs:6:46
   |
LL |     let _: unsafe<'a> &'a i32 = wrap_binder!(&());
   |                                              ^^^ expected `&i32`, found `&()`
   |
   = note: expected reference `&i32`
              found reference `&()`

error: `wrap_binder!()` can only wrap into unsafe binder, not `i32`
  --> $DIR/mismatch.rs:11:18
   |
LL |     let _: i32 = wrap_binder!(&());
   |                  ^^^^^^^^^^^^^^^^^
   |
   = note: unsafe binders are the only valid output of wrap
   = note: this error originates in the macro `wrap_binder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected unsafe binder, found integer as input of `unwrap_binder!()`
  --> $DIR/mismatch.rs:17:20
   |
LL |     unwrap_binder!(y);
   |                    ^
   |
   = note: only an unsafe binder type can be unwrapped

error[E0282]: type annotations needed
  --> $DIR/mismatch.rs:22:9
   |
LL |     let unknown = Default::default();
   |         ^^^^^^^
LL |
LL |     unwrap_binder!(unknown);
   |                    ------- type must be known at this point
   |
help: consider giving `unknown` an explicit type
   |
LL |     let unknown: /* Type */ = Default::default();
   |                ++++++++++++

error[E0282]: type annotations needed
  --> $DIR/mismatch.rs:28:26
   |
LL |     let x = wrap_binder!(&42);
   |                          ^^^ cannot infer type

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
